force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/Standard_Customer_Pay_Plan_Detail__c.object-meta.xml
<CustomObject>
    <label>Standard Customer Pay Plan Detail</label>
    <nameField>
        <displayFormat>SCPPD-{000}</displayFormat>
        <label>Standard Customer Pay Plan Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standard Customer Pay Plan Details</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>