force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Amount_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>%/Amount Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>