force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Basic__c.field-meta.xml
<CustomField>
    <fullName>Basic__c</fullName>
    <label>Basic</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>