force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Basic_Original__c.field-meta.xml
<CustomField>
    <fullName>Basic_Original__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Basic Original</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>