force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Calculate_Installment_Amount_as__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Installment_Amount_as__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Calculate Installment Amount as(%)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>