force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Call_Comments__c.field-meta.xml
<CustomField>
    <fullName>Call_Comments__c</fullName>
    <label>Call Comments</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>