force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Charge_Amount_Advance_Recd__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_Advance_Recd__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Any advance paid by the customer against this milestone cost</description>
    <label>Installment Amount (Advance Recd)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>