force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Charge_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_Billed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Billed amount for charge type [basic, utilities, infra, legal etc.,]</description>
    <label>Installment Amount (Demanded)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>