force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Charge_Amount_Due__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_Due__c</fullName>
    <formula>Charge_Amount_Billed__c -  Charge_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Amount (Balance)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>