force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Charge_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Charge_Amount_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Amount received from customer against the billed amount</description>
    <label>Installment Amount (Paid)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>