force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/CheckUpdateStdCustPayPlanDet__c.field-meta.xml
<CustomField>
    <fullName>CheckUpdateStdCustPayPlanDet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckUpdateStdCustPayPlanDet</label>
    <type>Checkbox</type>
</CustomField>