force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Construction_Stage_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Construction_Stage_Update_Date__c</fullName>
    <label>Construction Stage Update Date</label>
    <type>Date</type>
</CustomField>