force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Contribution_From__c.field-meta.xml
<CustomField>
    <fullName>Contribution_From__c</fullName>
    <label>Contribution From</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Financial Institution</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>