force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/CPPH_Name__c.field-meta.xml
<CustomField>
    <fullName>CPPH_Name__c</fullName>
    <label>CPPH Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>