force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Customer_Pay_Plan_Header__c.field-meta.xml
<CustomField>
    <fullName>Customer_Pay_Plan_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Pay Plan Header</label>
    <referenceTo>Customer_Pay_Plan_Header__c</referenceTo>
    <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
    <relationshipName>Standard_Customer_Pay_Plan_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>