force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Day_0_ServiceTax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Day_0_ServiceTax_Amount__c</fullName>
    <label>Day 0 ServiceTax Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>