force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Days_Months__c.field-meta.xml
<CustomField>
    <fullName>Days_Months__c</fullName>
    <label>Days/Months</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
                <default>true</default>
                <label>Day(s)</label>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>