force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Days_Months_Value__c.field-meta.xml
<CustomField>
    <fullName>Days_Months_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Day/Months Value</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>