force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Deduct_Token__c.field-meta.xml
<CustomField>
    <fullName>Deduct_Token__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter the stage at which token is to be deducted</description>
    <label>Deduct Token</label>
    <type>Checkbox</type>
</CustomField>