force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Demand_Link__c.field-meta.xml
<CustomField>
    <fullName>Demand_Link__c</fullName>
    <formula>IF(!ISBLANK(Milestone_Demand_Id__c), HYPERLINK(&quot;/&quot;&amp; Milestone_Demand_Id__c, &quot;Milestone Demand&quot;),&quot;Not Raised&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Link</label>
    <type>Text</type>
</CustomField>