force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Demand_Overdue_Ageing__c.field-meta.xml
<CustomField>
    <fullName>Demand_Overdue_Ageing__c</fullName>
    <formula>IF(IsPaymentOverdue__c = TRUE,  (TODAY() -   Payment_Due_Date__c) , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Overdue Ageing</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>