force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Dont_Override__c.field-meta.xml
<CustomField>
    <fullName>Dont_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dont Override</label>
    <type>Checkbox</type>
</CustomField>