force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Date on which the demand should be raised for this milestone. Automatically managed by the system based on the  Construction Stages</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>