force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Due_Date_on_Quote__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_on_Quote__c</fullName>
    <description>Storing the original due date as on the quote for reference</description>
    <label>Due Date (on Quote)</label>
    <type>Date</type>
</CustomField>