force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/gst__c.field-meta.xml
<CustomField>
    <fullName>gst__c</fullName>
    <defaultValue>true</defaultValue>
    <label>gst</label>
    <type>Checkbox</type>
</CustomField>