force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Infrastructure_Charges__c.field-meta.xml
<CustomField>
    <fullName>Infrastructure_Charges__c</fullName>
    <label>Infrastructure Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>