force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Inst_No__c.field-meta.xml
<CustomField>
    <fullName>Inst_No__c</fullName>
    <label>Inst No</label>
    <length>15</length>
    <type>Text</type>
</CustomField>