force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Installment__c.field-meta.xml
<CustomField>
    <fullName>Installment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Installment Amount</label>
    <precision>13</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>