force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Installment_Number__c.field-meta.xml
<CustomField>
    <fullName>Installment_Number__c</fullName>
    <label>Installment Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>