force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Int_Flatcost_Pending__c.field-meta.xml
<CustomField>
    <fullName>Int_Flatcost_Pending__c</fullName>
    <formula>Int_Flatcost_Total__c -(  Int_Flatcost_Paid__c +  Int_Flatcost_Waived__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int Flatcost (Pending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>