force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Int_Flatcost_Total__c.field-meta.xml
<CustomField>
    <fullName>Int_Flatcost_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Int Flatcost (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>