force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Int_ServiceTax_Pending__c.field-meta.xml
<CustomField>
    <fullName>Int_ServiceTax_Pending__c</fullName>
    <formula>Int_ServiceTax_Total__c - (  Int_ServiceTax_Waived__c  +  Int_ServiceTax_Paid__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Int ServiceTax (Pending)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>