force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Integer_Installment_No__c.field-meta.xml
<CustomField>
    <fullName>Integer_Installment_No__c</fullName>
    <formula>VALUE( Inst_No__c ) * 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integer Installment No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>