force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/InterestTest__c.field-meta.xml
<CustomField>
    <fullName>InterestTest__c</fullName>
    <label>InterestTest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>