force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/InterestValue__c.field-meta.xml
<CustomField>
    <fullName>InterestValue__c</fullName>
    <formula>IF(IsPaymentOverdue__c = True,
(Charge_Amount_Due__c+Service_Tax_Amount_Due__c)*Project__r.RDS_Interest_Rate__c/36500*(TODAY()-Payment_Due_Date__c) ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InterestValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>