force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Invoice_OverDue__c.field-meta.xml
<CustomField>
    <fullName>Invoice_OverDue__c</fullName>
    <formula>if( Due_Date__c &lt; TODAY()&amp;&amp;  NOT(IsSendDemandLetter__c) &amp;&amp;  Is_Milestone_Achieved__c , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice OverDue</label>
    <type>Checkbox</type>
</CustomField>