force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Invoice_Raised_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Raised_Date__c</fullName>
    <label>Invoice Raised Date</label>
    <type>Date</type>
</CustomField>