force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Is_Milestone_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Is_Milestone_Achieved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the construction stage is complete</description>
    <label>Is Milestone Achieved</label>
    <type>Checkbox</type>
</CustomField>