force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Is_PTP_Partly_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_PTP_Partly_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PTP Partly Paid</label>
    <type>Checkbox</type>
</CustomField>