force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Is_Registration_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_Registration_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Registration Done</label>
    <type>Checkbox</type>
</CustomField>