force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Is_to_be__c.field-meta.xml
<CustomField>
    <fullName>Is_to_be__c</fullName>
    <label>Is to be Paid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>