force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Is_to_be_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_to_be_Paid__c</fullName>
    <label>Is to be Paid</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Construction Stage</fullName>
                <default>true</default>
                <label>Construction Stage</label>
            </value>
            <value>
                <fullName>From Dt. of Booking</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>From Dt. of Registration</fullName>
            </value>
            <value>
                <fullName>On Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>