force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/IsPaymentOverdue__c.field-meta.xml
<CustomField>
    <fullName>IsPaymentOverdue__c</fullName>
    <formula>AND((Payment_Due_Date__c &lt;  TODAY()),OR((Charge_Amount_Due__c &gt; 0), (Service_Tax_Amount_Due__c &gt;0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This flag indicates if a payment is overdue.</inlineHelpText>
    <label>IsPaymentOverdue</label>
    <type>Checkbox</type>
</CustomField>