force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/IsSendDemandLetter__c.field-meta.xml
<CustomField>
    <fullName>IsSendDemandLetter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDemandLetterSent</label>
    <type>Checkbox</type>
</CustomField>