force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/L1__c.field-meta.xml
<CustomField>
    <fullName>L1__c</fullName>
    <label>Reason For Call</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Collections</fullName>
            </value>
            <value>
                <fullName>Post Sales</fullName>
            </value>
            <value>
                <fullName>Target Calling</fullName>
            </value>
            <value>
                <fullName>Feedback</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>