force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/L2__c.field-meta.xml
<CustomField>
    <fullName>L2__c</fullName>
    <label>Reason Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L1__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Grievance</fullName>
            </value>
            <value>
                <fullName>Enquiry</fullName>
            </value>
            <value>
                <fullName>Feedback / General Interaction</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Greetings</fullName>
            </value>
            <value>
                <fullName>Demand Intimation</fullName>
            </value>
            <value>
                <fullName>Due Date Intimation</fullName>
            </value>
            <value>
                <fullName>Cancellation Intimation</fullName>
            </value>
            <value>
                <fullName>Operation Calls</fullName>
            </value>
            <value>
                <fullName>Suggestions</fullName>
            </value>
            <value>
                <fullName>Know Your Customer</fullName>
            </value>
            <value>
                <fullName>Appreciation</fullName>
            </value>
            <value>
                <fullName>Delay Expected</fullName>
            </value>
            <value>
                <fullName>Not Contactable</fullName>
            </value>
            <value>
                <fullName>DNC</fullName>
            </value>
            <value>
                <fullName>For Bank Disbursement</fullName>
            </value>
            <value>
                <fullName>Asked to call back</fullName>
            </value>
            <value>
                <fullName>Need to call back</fullName>
            </value>
            <value>
                <fullName>Incorrect number</fullName>
            </value>
            <value>
                <fullName>Promised to pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>