force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/L3__c.field-meta.xml
<CustomField>
    <fullName>L3__c</fullName>
    <label>Reason Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>L2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Interest waiver not accepted</fullName>
            </value>
            <value>
                <fullName>Possession delay</fullName>
            </value>
            <value>
                <fullName>Car parks not being alloted</fullName>
            </value>
            <value>
                <fullName>Unhappy with RM</fullName>
            </value>
            <value>
                <fullName>Delay in registration</fullName>
            </value>
            <value>
                <fullName>Needs to talk to a senior</fullName>
            </value>
            <value>
                <fullName>Needs to talk to Promoter</fullName>
            </value>
            <value>
                <fullName>Revised area not acceptable</fullName>
            </value>
            <value>
                <fullName>Wants to resell prior to lock in ending</fullName>
            </value>
            <value>
                <fullName>Disputing resale transfer charges</fullName>
            </value>
            <value>
                <fullName>Mis-selling</fullName>
            </value>
            <value>
                <fullName>Contemplating Legal Action</fullName>
            </value>
            <value>
                <fullName>Disputing changes in Flat</fullName>
            </value>
            <value>
                <fullName>Concerns due to media report</fullName>
            </value>
            <value>
                <fullName>Old payment not reflecting</fullName>
            </value>
            <value>
                <fullName>Flat issues on possession</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Duplicate invoice request</fullName>
            </value>
            <value>
                <fullName>Receipt request</fullName>
            </value>
            <value>
                <fullName>Ledger required</fullName>
            </value>
            <value>
                <fullName>Architect certificate request</fullName>
            </value>
            <value>
                <fullName>Request for registration</fullName>
            </value>
            <value>
                <fullName>MVAT and Stamp duty details required</fullName>
            </value>
            <value>
                <fullName>TDS Enquiry</fullName>
            </value>
            <value>
                <fullName>Needs copy of Agreement for Sale</fullName>
            </value>
            <value>
                <fullName>Haven&apos;t received confirmation / Allotment</fullName>
            </value>
            <value>
                <fullName>Change in correspondance requests</fullName>
            </value>
            <value>
                <fullName>Change in applicant name</fullName>
            </value>
            <value>
                <fullName>Resale process enquiry</fullName>
            </value>
            <value>
                <fullName>Resale NOC request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>