force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Last_Call_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Last_Call_Disposition__c</fullName>
    <label>Last Call Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Promised to pay</fullName>
            </value>
            <value>
                <fullName>Asked to call back</fullName>
            </value>
            <value>
                <fullName>Need to call back</fullName>
            </value>
            <value>
                <fullName>Incorrect number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>