force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Marked_for_Interest__c.field-meta.xml
<CustomField>
    <fullName>Marked_for_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marked for Interest</label>
    <type>Checkbox</type>
</CustomField>