force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Milestone_Demand_Id__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Demand_Id__c</fullName>
    <description>Id of demand record that was raised for demanding the payment for this milestone</description>
    <label>Milestone Demand Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>