force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Milestone_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Milestone Percentage</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>