force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/On_date__c.field-meta.xml
<CustomField>
    <fullName>On_date__c</fullName>
    <label>On date</label>
    <type>Date</type>
</CustomField>