force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Original_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Original_Percentage__c</fullName>
    <formula>IF(Standard_Pay_Plan_Header__r.Charge_Code__r.S_Charge_Percentage__c  &lt;&gt; 0,Standard_Pay_Plan_Header__r.Charge_Code__r.S_Charge_Percentage__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>