force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Payment_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Payment_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Milestone</label>
    <referenceTo>Payment_Milestone__c</referenceTo>
    <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
    <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>