force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/PayPlanIID__c.field-meta.xml
<CustomField>
    <fullName>PayPlanIID__c</fullName>
    <defaultValue>0</defaultValue>
    <label>PayPlanIID</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>