force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Pick_up_address__c.field-meta.xml
<CustomField>
    <fullName>Pick_up_address__c</fullName>
    <label>Pick up address</label>
    <length>400</length>
    <type>LongTextArea</type>
</CustomField>