force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Premium_2__c.field-meta.xml
<CustomField>
    <fullName>Premium_2__c</fullName>
    <label>Premium 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>