force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
    <relationshipName>Standard_Customer_Pay_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>