force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Project_Charge__c.field-meta.xml
<CustomField>
    <fullName>Project_Charge__c</fullName>
    <formula>Standard_Pay_Plan_Header__r.Charge_Code__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Charge</label>
    <type>Text</type>
</CustomField>