force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Project_Construction_Stages__c.field-meta.xml
<CustomField>
    <fullName>Project_Construction_Stages__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Construction Stages</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Project_Construction_Stages__c.Tower__c</field>
            <operation>equals</operation>
            <valueField>$Source.Tower__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Construction_Stages__c</referenceTo>
    <relationshipLabel>Standard Customer Pay Plan Details</relationshipLabel>
    <relationshipName>Standard_Customer_Pay_Plan_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>