force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/PTP_Amount__c.field-meta.xml
<CustomField>
    <fullName>PTP_Amount__c</fullName>
    <label>PTP Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>