force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/PTP_Date__c.field-meta.xml
<CustomField>
    <fullName>PTP_Date__c</fullName>
    <label>PTP Date</label>
    <type>DateTime</type>
</CustomField>