force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/PTP_Instrument__c.field-meta.xml
<CustomField>
    <fullName>PTP_Instrument__c</fullName>
    <label>PTP Instrument</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Demand Draft</fullName>
            </value>
            <value>
                <fullName>NEFT</fullName>
            </value>
            <value>
                <fullName>RTGS</fullName>
            </value>
            <value>
                <fullName>Pay Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>