force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Reason_for_deferment__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_deferment__c</fullName>
    <label>Reason for deferment</label>
    <type>TextArea</type>
</CustomField>