force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Registration_Linked__c.field-meta.xml
<CustomField>
    <fullName>Registration_Linked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Registration Linked</label>
    <type>Checkbox</type>
</CustomField>