force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <label>Remarks</label>
    <type>TextArea</type>
</CustomField>