force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Remider_1_Reg_Unit__c.field-meta.xml
<CustomField>
    <fullName>Remider_1_Reg_Unit__c</fullName>
    <label>Remider 1 Reg. Unit</label>
    <type>DateTime</type>
</CustomField>