force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Remider_2_Un_Reg_Unit__c.field-meta.xml
<CustomField>
    <fullName>Remider_2_Un_Reg_Unit__c</fullName>
    <label>Remider 2 Un-Reg. Unit</label>
    <type>DateTime</type>
</CustomField>