force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/Revised_Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Invoice_Date__c</fullName>
    <label>Revised Invoice Date</label>
    <type>Date</type>
</CustomField>