force-app/main/default/objects/Standard_Customer_Pay_Plan_Detail__c/fields/RW_SAP_Milestone_Code__c.field-meta.xml
<CustomField>
    <fullName>RW_SAP_Milestone_Code__c</fullName>
    <formula>Payment_Milestone__r.Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Milestone Code</label>
    <type>Text</type>
</CustomField>